changed csv for heights_vs_birth-place

--- a/preprocessing/heights_vs_birth-place.ipynb
+++ b/preprocessing/heights_vs_birth-place.ipynb
@@ -32,7 +32,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "df = pd.read_csv(\"../datasets/Players.csv\")\n",
+    "df = pd.read_csv(\"../datasets/players_cleaned.csv\")\n",
     "\n",
     "# Take a look at the first few rows\n",
     "print (df.head())"
@@ -46,11 +46,7 @@
    "source": [
     "bs1 = df.groupby(['birth_state']).count().reset_index().sort_values(by='height',ascending=False)\n",
     "grouped_height = df['height'].groupby(df['birth_state']) \n",
-    "mean_height = grouped_height.mean()\n",
-    "\n",
-    "#printing the means value \n",
-    "#print(grouped_height.mean()) \n",
-    "#print(mean_height)"
+    "mean_height = grouped_height.mean()\n"
    ]
   },
   {
