--- a/preprocessing/heights_vs_birth-place.ipynb
+++ b/preprocessing/heights_vs_birth-place.ipynb
@@ -35,9 +35,8 @@
     "import seaborn as sns\n",
     "\n",
     "# Read csv file into a pandas dataframe\n",
-    "os.chdir(r\"C:\\SWAROOP\\COLLEGE\\DA\\FINAL_DS\\DATA_CLEANING\\CLEANED_DATASETS\")\n",
     "\n",
-    "df = pd.read_csv(\"players_cleaned.csv\")\n",
+    "df = pd.read_csv("..\datasets\players_cleaned.csv\")\n",
     "\n",
     "# Take a look at the first few rows\n",
     "print (df.head())"
@@ -203,104 +202,6 @@
     "plt.figure(figsize=(25,15))\n",
     "mean_height.plot(kind='bar',x='birth_state',y='birth_states_mean_height',title = 'Mean heights of each State')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
